--- a/standup_timer/pubspec.yaml
+++ b/standup_timer/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   circular_countdown_timer: ^0.2.0 # Or the latest version
   http: ^1.3.0
   desktop_window: ^0.4.2
+  yaru: ^4.1.0
+  yaru_icons: ^2.4.0
+  yaru_window: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
