--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   window_size: ^0.1.0
   clipboard: ^0.1.3
   shared_preferences: ^2.2.2
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
