--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   circular_countdown_timer: ^0.2.0 # Or the latest version
   http: ^1.3.0
   desktop_window: ^0.4.2
-  yaru: ^4.1.0
-  yaru_icons: ^2.4.0
+  yaru: ^8.0.0
   yaru_window: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +44,7 @@ dependencies:
   clipboard: ^0.1.3
   shared_preferences: ^2.2.2
   flutter_riverpod: ^2.5.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
