ci: rename snap artifact
rename the artifact to something similar to the linux bundle artifact for consistency

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: standup-timer_amd64.snap
+          name: standup-timer_snap-amd64
           path: ${{ steps.snapcraft.outputs.snap }}
       - name: Publish
         if: github.ref == 'refs/heads/main'
