--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           persist-credentials: false
       - name: Build
         id: snapcraft
-        uses: snapcore/action-build@v1
+        uses: canonical/action-build@3bdaa03e1ba6bf59a65f84a751d943d549a54e79 # v1.3.0
       - name: Upload logs
         if: failure()
         uses: actions/upload-artifact@v4
@@ -54,7 +54,7 @@ jobs:
           path: ${{ steps.snapcraft.outputs.snap }}
       - name: Publish
         if: github.ref == 'refs/heads/main'
-        uses: snapcore/action-publish@v1
+        uses: snapcore/action-publish@214b86e5ca036ead1668c79afb81e550e6c54d40 # v1.2.0
         env:
           SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
         with:
