--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  circular_countdown_timer: ^0.2.0 # Or the latest version
+  circular_countdown_timer: ^0.2.0
   http: ^1.3.0
   desktop_window: ^0.4.2
   yaru: ^8.0.0
   yaru_window: ^0.2.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-
   window_size: ^0.1.0
   clipboard: ^0.1.3
   shared_preferences: ^2.2.2
