ci: enforce lockfile
this should help catch discrepancies between the pubspec.yaml and pubspec.lock

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install flutter
         run: sudo snap install --classic flutter
       - name: Install dependencies
-        run: flutter pub get
+        run: flutter pub get --enforce-lockfile
       - name: Analyze dependencies
         run: flutter pub outdated
       - name: Analyze
