--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_riverpod: ^2.5.1
   confetti: ^0.8.0
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
