--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -11,7 +11,7 @@ jobs:
     name: Check CLA
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      pull-requests: read # required to retrieve PR author email
     steps:
       - name: Check if CLA is signed
         uses: canonical/has-signed-canonical-cla@19bae73390fdbfdc1ef9a9bb9408d87a1de755f6 # v2
