--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -2,13 +2,16 @@ name: Check CLA
 permissions:
   contents: read
 on: [pull_request]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   cla-check:
     name: Check CLA
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      pull-requests: read # required to retrieve PR author email
     steps:
       - name: Check if CLA is signed
         uses: canonical/has-signed-canonical-cla@19bae73390fdbfdc1ef9a9bb9408d87a1de755f6 # v2
